--- a/style.css
+++ b/style.css
@@ -1,46 +1,47 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.container {
-border: 1px solid red;
-display: flex;
-flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
+#container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+.text {
+  border: 1px solid blue;
+}
+.inputs {
+  border: 1px solid black;
+}
 
-}
-.text{
-    border: 1px solid blue;
-}
-.inputs{
-border: 1px solid black;
-
-}
 .style_inputs input {
-  
+  outline: 0; /*tirar borda vermelha do input no mozilla*/
 }
-.style_inputs i,.style_inputs small{
-    visibility: hidden; /*nao aparecer nenhum icon*/
+.style_inputs.success input {
+  border: 2px solid #4eca64;
+}
+.style_inputs.error input {
+  border: 2px solid #db5a5a;
+}
+.style_inputs.success i .img_success {
+  visibility: visible;
 }
 
-.success input{
-    border:  2px solid #4ECA64;
+.style_inputs.error i .img_error {
+  visibility: visible;
 }
-
-.success i {
+.style_inputs.error small{
     visibility: visible;
 }
-
-.error input{
-    border: 2px solid #DB5A5A;
+.style_inputs small {
+  color: #db5a5a;
+  visibility: hidden;
 }
-
-.error i,.error small{
-    visibility: visible;
-    color: #DB5A5A;
+.style_inputs i {
+  visibility: hidden;
 }
